--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "formik": "^2.4.6",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
+    "react-data-table-component": "^7.7.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-infinite-scroll-component": "^6.1.0",
