--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "نظام رابط",
+  "name": "rabit-system",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,19 +12,29 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.9",
+    "chartjs-plugin-datalabels": "^2.2.0",
+    "date-fns": "^2.29.3",
     "font-awesome": "^4.7.0",
     "fontawesome": "^5.6.3",
     "formik": "^2.4.6",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
+    "pdfmake": "^0.2.20",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
+    "react-chartjs-2": "^5.3.0",
     "react-data-table-component": "^7.7.0",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -54,5 +64,8 @@
     "css-loader": "^7.1.2",
     "mini-css-extract-plugin": "^2.9.2",
     "style-loader": "^4.0.0"
+  },
+  "resolutions": {
+    "date-fns": "^2.29.3"
   }
 }
